[project]
name = "simple-sim"
version = "0.1.0"
description = "A simple simulation app using simpy"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1.1",
]

[project.scripts]
simple-sim = "simple_sim.simulation:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
